--- a/app/src/main/res/layout/fragment_permissions.xml
+++ b/app/src/main/res/layout/fragment_permissions.xml
@@ -64,7 +64,7 @@
                     android:background="@null"
                     android:contentDescription="@string/app_name"
                     android:src="@drawable/ic_done"
-                    android:tint="@color/colorAccent"
+                    android:tint="@color/colorPrimary"
                     android:visibility="gone"/>
             </FrameLayout>
 
@@ -104,7 +104,7 @@
                     android:background="@null"
                     android:contentDescription="@string/app_name"
                     android:src="@drawable/ic_done"
-                    android:tint="@color/colorAccent"
+                    android:tint="@color/colorPrimary"
                     android:visibility="gone"/>
             </FrameLayout>
 
@@ -144,7 +144,7 @@
                     android:background="@null"
                     android:contentDescription="@string/app_name"
                     android:src="@drawable/ic_done"
-                    android:tint="@color/colorAccent"
+                    android:tint="@color/colorPrimary"
                     android:visibility="gone"/>
             </FrameLayout>
 
@@ -153,20 +153,19 @@
                 android:layout_height="1dp"
                 android:background="@color/black_alpha_16"/>
 
-            <net.qiujuer.genius.ui.widget.Button
+            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                 android:id="@+id/btn_submit"
                 android:layout_width="@dimen/len_172"
                 android:layout_height="@dimen/len_44"
                 android:layout_gravity="center"
                 android:layout_marginBottom="@dimen/len_48"
                 android:layout_marginTop="@dimen/len_28"
-                android:background="@drawable/sel_btn_bg_accent_44"
+                android:background="@color/colorPrimary"
                 android:gravity="center"
                 android:text="@string/label_permission_submit"
                 android:textColor="@color/white"
-                app:gTouchColor="@color/white_alpha_48"
-                app:gTouchCornerRadius="22dp"
-                app:gTouchEffect="ripple"/>
+                app:qmui_borderColor="@color/colorPrimary"
+                app:qmui_backgroundColor="@color/colorPrimary"/>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
