--- a/app/src/main/res/layout/item_exchange_recycler.xml
+++ b/app/src/main/res/layout/item_exchange_recycler.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="80dp"
@@ -54,15 +55,18 @@
             tools:text="￥18.13909"/>
     </LinearLayout>
 
-    <TextView
+    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
         android:id="@+id/quote_exchange"
         android:layout_width="70dp"
         android:layout_height="30dp"
         android:layout_gravity="end|center_vertical"
         android:layout_marginEnd="10dp"
-        android:background="#165d78"
         android:gravity="center"
+        android:enabled="true"
         android:textColor="@color/white"
+        app:qmui_backgroundColor="@color/quotation_btn_color_selector"
+        app:qmui_borderWidth="0dp"
+        app:qmui_radius="@dimen/len_6"
         tools:text="+2.22%"/>
 
     <View
