修复多个一直bug，添加非小号以及设置默认资产

--- a/app/src/main/res/layout/item_wallet_manager.xml
+++ b/app/src/main/res/layout/item_wallet_manager.xml
@@ -83,6 +83,7 @@
                 tools:text="0"/>
 
             <TextView
+                android:id="@+id/asset_symbol_wallet_manager_item"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
