--- a/app/src/main/res/layout/activity_import_account.xml
+++ b/app/src/main/res/layout/activity_import_account.xml
@@ -22,6 +22,29 @@
         android:orientation="vertical"
         android:padding="@dimen/len_10">
 
+        <RadioGroup
+            android:id="@+id/type_group"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/brainKey"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="助记词"/>
+            <RadioButton
+                android:id="@+id/privateKey"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="私钥"
+                android:layout_marginStart="@dimen/len_10"
+                />
+
+
+        </RadioGroup>
+
         <EditText
             android:id="@+id/memorizing_words_et"
             android:layout_width="match_parent"
