重构Asset管理器和Wallet管理器

--- a/app/src/main/res/layout/activity_quotation_detail.xml
+++ b/app/src/main/res/layout/activity_quotation_detail.xml
@@ -97,7 +97,7 @@
         android:layout_height="40dp"
         android:background="@drawable/tab_panel_bg"/>
 
-    <com.gxb.gxswallet.base.NoScrollViewPage
+    <com.gxb.gxswallet.base.view.NoScrollViewPage
         android:id="@+id/content_viewPager_quotation"
         android:layout_width="match_parent"
         android:layout_height="0dp"
